# remoteos-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  install-linux.sh  install.ps1  install.sh  mcp-proxy.py  pyproject.toml  uninstall-linux.sh  uninstall.ps1  uninstall.sh
docs/superpowers/plans/: 2026-04-23-linux-support.md
docs/superpowers/specs/: 2026-04-05-remoteos-mcp-design.md  2026-04-23-linux-support-design.md
src/remoteos/: __init__.py  __main__.py  config.py  desktop.py  network.py  ocr.py  process_mgr.py  recording.py  registry.py  security.py  services.py  taskmanager.py  tiers.py
src/remoteos/platform/: __init__.py
src/remoteos/platform/linux/: desktop.py  services.py  system.py
src/remoteos/platform/mac/: desktop.py  services.py  system.py
src/remoteos/platform/win/: desktop.py
src/winremote/: __main__.py  ocr.py  registry.py  taskmanager.py
