[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remoteos-mcp"
version = "0.7.0.dev3"
description = "Remote OS MCP Server - control Windows, macOS, and Linux machines via MCP protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "remoteos contributors" }]
keywords = ["mcp", "remote", "automation", "desktop", "windows", "macos", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment",
]
dependencies = [
    "fastmcp>=2.0.0",
    "pyautogui>=0.9.54; sys_platform != 'linux'",
    "psutil>=5.9.0",
    "pywin32>=306; sys_platform == 'win32'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
    "Pillow>=10.0.0; sys_platform != 'linux'",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "thefuzz[speedup]>=0.20.0",
    "tabulate>=0.9.0",
    "markdownify>=0.13.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
remoteos-mcp = "remoteos.__main__:cli"

[project.optional-dependencies]
ocr = ["pytesseract>=0.3.10"]
dev = ["ruff>=0.9.0", "pytest>=8.0.0"]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "starlette[full]>=0.37.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["src/remoteos"]
